# ChangeLog for dev-python/sphinx
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.188 2015/04/02 09:56:15 idella4 Exp $

*sphinx-1.3-r1 (02 Apr 2015)

  02 Apr 2015; Ian Delaney <idella4@gentoo.org> +sphinx-1.3-r1.ebuild:
  revbump; correction to deps noted by Arfrever

  28 Mar 2015; Markus Meier <maekke@gentoo.org> sphinx-1.3.ebuild:
  add ~arm, bug #543742

  21 Mar 2015; Jeroen Roovers <jer@gentoo.org> sphinx-1.3.ebuild:
  Marked ~hppa (bug #543742).

*sphinx-1.3 (19 Mar 2015)

  19 Mar 2015; Patrick Lauer <patrick@gentoo.org> +sphinx-1.3.ebuild:
  Bump, new test deps, temporarily dropped keywords alpha arm hppa ia64
  ppc ppc64 until dependencies catch up

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> sphinx-1.2.3.ebuild:
  add arm64 support, tested on A53 board

  03 Dec 2014; Mike Gilbert <floppym@gentoo.org> sphinx-1.2.2.ebuild,
  sphinx-1.2.3.ebuild:
  Fix build failure when DISTUTILS_NO_PARALLEL_BUILD=1, bug 531534.

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sphinx-1.2.2.ebuild:
  Stable for sparc, wrt bug #524416

*sphinx-1.1.3-r7 (23 Nov 2014)

  23 Nov 2014; Mike Gilbert <floppym@gentoo.org> +sphinx-1.1.3-r7.ebuild:
  Restore stable ebuild for sparc.

  23 Nov 2014; Mike Gilbert <floppym@gentoo.org> -sphinx-1.1.3-r7.ebuild,
  -sphinx-1.2.1.ebuild:
  Remove old.

  23 Nov 2014; Mike Gilbert <floppym@gentoo.org> sphinx-1.1.3-r7.ebuild,
  sphinx-1.2.1.ebuild, sphinx-1.2.2.ebuild, sphinx-1.2.3.ebuild:
  Cleanup python_gen_usedep usage.

  20 Nov 2014; Ian Delaney <idella4@gentoo.org> sphinx-1.2.3.ebuild:
  Add pypy3 support

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> sphinx-1.2.2.ebuild:
  Stable for ia64, wrt bug #524416

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> sphinx-1.2.2.ebuild:
  Stable for alpha, wrt bug #524416

  31 Oct 2014; Agostino Sarubbo <ago@gentoo.org> sphinx-1.2.2.ebuild:
  Stable for ppc64, wrt bug #524416
