@@ -6,18 +6,17 @@ AUX sphinx-1.1.3-python3.patch 1793 SHA256 f21f0f4f8b1f83660344b7b8c1512f853d579
 DIST Sphinx-1.1.3.tar.gz 2632059 SHA256 34dc95b70a2b07a61b5d61034c34b05f82514aab54ad27adedb49cee911bb8e9 SHA512 b8312140d752bf557c8e41728513812aff3e5d0a89af88dea9da0df21bf09c8315f13305d7a724a5596d0192b167d613065ea564c6d92e4ffb23f1f246dbf052 WHIRLPOOL a40c4d0f5c32cf1d4b9b662b0fb2b2b0956e0455abbc88d6b5f95c54f93cc2baae25e8b9196dd0b64090d30a1a796c336ca4b6866243be4198ccdf67a7e18b48
 DIST Sphinx-1.2.2.tar.gz 3143671 SHA256 2d3415f5b3e6b7535877f4c84fe228bdb802a8993c239b2d02c23169d67349bd SHA512 44073c215f9d0e7f6c7bc91cb85b0508a96e5cfff5f940fef86e2fc6f11281d03b54e87e51e5a99a23e96b470a93f3af86a6a3ab7c317c747406c55b4c37791c WHIRLPOOL c5ed15b51682d3be9f8349ab838c6758cb4e25023b6ad13622d748b771594ed75f786709a25fb2d61ad245ecef0925e5bcc1aafb93fc355a0f0ea50df63efcd7
 DIST Sphinx-1.2.3.tar.gz 3200548 SHA256 94933b64e2fe0807da0612c574a021c0dac28c7bd3c4a23723ae5a39ea8f3d04 SHA512 00346516e826a65145a3a7fd25ef7cee569ae7fdcc0c1bec3a7301fc08d5d8730d02eee792c3efedfcac17e712ea7e2ad70ea1fcdedc11720ad54f6bcb51ad05 WHIRLPOOL 0c0e2e21a52829893857939f977e8312c4eac11f5d2aec3b8e4f9c8ffdbf14c4aa46a6c26dac0ad4abfe92b3bdad72a3468e6d2ff2485df6efaf3fccd17ae69b
-DIST Sphinx-1.3.tar.gz 3465600 SHA256 8bbe269ecbc6d19c45974b99f9e38afd2545103974cf54a1330fd3314ab5fea4 SHA512 94df299b5a0ddc7bb092641e0bb00a8491fe2a7468728a26468feb31ad9002d94d9696f370546dee961dc7ac4167bf8204f2b3a5e4a0d79beff27b87a64fea05 WHIRLPOOL 446abad493d4ade13702261594e0ba0f336f6bba007c56a7f8c431386511e4488a3dfd2f32ee7f95292b2f233039be1dedc92a7485a284820c4a2ab6620c90b6
+DIST Sphinx-1.3.1.tar.gz 3469782 SHA256 1a6e5130c2b42d2de301693c299f78cc4bd3501e78b610c08e45efc70e2b5114 SHA512 8b92b69c4ced242c5e608ea03a7a061b0d2908f34f3150048ff4ce08b5d56be4a642a6aec13fa249ff8208fa8dd2d38d8a10d37ebbcc68385ee51f527ede0b94 WHIRLPOOL f3e442fd1f1c260b21f3e2381f028884b6247758448439e7be4cf784f50ec12494e384c77a0c4ccac473f25d7bb88f5424be937d72bb3fac1b6f6387a5746f66
 EBUILD sphinx-1.1.3-r7.ebuild 3187 SHA256 8fbd49b4dab19c1373411728c12859c88f1f79e3fcec69391505e0ba4aefa9b1 SHA512 e1fb843906ebefceaa7608c3a160da3e75883a6117ab70ca32562128226a807da209f881f5534e6fec5690320ac5311b9f00183c08608e6eaa887fbcf9623f89 WHIRLPOOL 9703a43357b9443b0642a19b55f6c78a8af63ccc54db6120d107c1bda555b6aaa0858615c6a5e817ba93faf2bfa7ff3bdc81cf7337387e2baed0f58bdfb3b60d
 EBUILD sphinx-1.2.2.ebuild 3139 SHA256 fee9616b3da4d18d946e98330664fd8f2d102b535313d71fcf436c0040aa0db3 SHA512 e827bf8086b1470861838cc7f789e3ec707ff19932ca284f126f18973cec56ef6996783c5f72ecebe18f587594f28418562c050eb6cb1200cae0e4a786600950 WHIRLPOOL 9776509476cab74c9811ae42e6ea2bb53b4b11e81a2ec65e183d67ccc4283ad3787b2f9862bd0910af0f1a2a9a4638978732752795de8dcce4ad5e3b5a96f8f5
 EBUILD sphinx-1.2.3.ebuild 3191 SHA256 7be3e9ebb5e137f8cd90693f1f57f75c43ad0e8038799e56fb2dc96a48e9d860 SHA512 2c0d4d42c94b5bf7dd39d04192196a22b90ea7779598030873a91a718c16dfdd1062d7d7ae372c169ac0c96eba3e5f4e3a0baa5a5c0c36f1c2d2583b18d8efd6 WHIRLPOOL 2b3cbbda45c7bbc94eaa5274d837fc28839d9fd0c2df829425062803b45fb314072545ccab05cda0b770575f288abd77aa6c748e8e749b51db8b03786d31b764
-EBUILD sphinx-1.3-r1.ebuild 3358 SHA256 ea2742a8288d85844d4f50bf01a91995f82de0caa1940b999254b8d37e5f7c36 SHA512 43a61127448aa1bf8665c23c94e67cc9f883b140f9a6d18cc47bf6e54e250f0a1b81aa43e559884128f0117e3df55f0ebdbf6ccb0155ee7f75e572a0c59754d5 WHIRLPOOL 1ecf27f7ea08d3a9b36ec8a73698196b83e2718ea571b0c22b2388bc57a039650d526e47f5d17c000f4a392446d974751b812e01e2bbd31e0ea8f3d25137a278
-EBUILD sphinx-1.3.ebuild 3376 SHA256 1bfe1fb84c560b62579b24f507c1c5e169867fab356775f1b20a292f8ffea874 SHA512 78cbf46a9ebb158f47d5ac11147e140699354416e804f62c970037a9ad2784cdbdcdfa6c60dd6f98943fdbba511da08560972863333a1f36e4f6593075d44671 WHIRLPOOL 1264c6f45be300e553a83a02d9535c515d7f5afe48dcb4055b72eba7b70d3299ee8cbf2ad7cf14dec7c358b9412514e844d1f71701fb94e1d74286ffcdf702c8
-MISC ChangeLog 23096 SHA256 cfce23cb11228f80cf813df33577d74d13c97eb94f070ba155b461a1e5b865fc SHA512 764a785bc44e1539e0db05a7ead90a31825c34bf00abd67e2b432773eaf08382e9159a4b4a3ac5b333a0301142d8ce91038d66aacdb572b5da7a872cfa526689 WHIRLPOOL 17523ab08ffd18b69b7857c0ea551e56b77e2174dc32507a8fcedf84455d96988db7beb30c7ab663cd5bf3d5ad3cb66fc8bedd547f7f5c566b37d25cf9479818
+EBUILD sphinx-1.3.1.ebuild 3399 SHA256 512f691226bd979adf2f5ecd0ae08e6aa5223ddb26994ea1c13252febac05fc3 SHA512 8ff8ae60781fa73974506a21e083186b07682832e773a07afd6ed1071fe63308d29e0b9226f8e84e67210c51cc9e9f9ef8ee87b788b88dd33467129b7d81150c WHIRLPOOL 145b71af620af97cb92ac2e3c7b6c8862a883e0cc3b8407f6c7afccac8834b4716342566cadf95f4c6edd506eea10f6d718d77117f699d57d93a121d3ae0ebe5
+MISC ChangeLog 23266 SHA256 91b9edfc47040b261a1a8b4a669e06653bce4d976fc2ec174883d28775971da4 SHA512 fae74a5124f5a2ac3e9aab8ef53f1e80316a490b5e79e2a644ca12911552e65a3617613b3f571023c5a35cae0d58fe4247b7584a5b08df0b856e6764ed5a9574 WHIRLPOOL d0df3fce466e5b3beff3dd8c25c359f5f15bc7673bed33fbb84c321702f981c157ad3f4f05902e46ecc167bf2c0d810cffcdcf84f63e6ec231f4118c35221f09
 MISC metadata.xml 416 SHA256 9e9417fe86b8082263e371d1e92b98adf3ac73ed04ca0d97870423eee7110639 SHA512 68e3d7d3037dd4e2f36ff419507fe1cbe3822ab67d4e5ba9e76274d9db9ccac15d0f5479095d76758e2bc8d915493dd968742034d75ae9608ba6c88bb0db2a98 WHIRLPOOL cf811b4461bd1b39c249c82e0ce36ecdc721816fb10baca4f8f249b9bbac7908c1ec42be683850d34c099643d6d0e3a8e18969f2be12468993c8cd553177d6c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUdEk4ACgkQso7CE7gHKw3lhwCcD109oh19XnciM7Kav2oT6bYD
-W54AoIKR2daHDhe8rQ52lc+sFtFcbdch
-=BdA1
+iEYEAREIAAYFAlUlCB0ACgkQso7CE7gHKw3klgCfWAP0Cv3f6UbXTFzhdQ1qF98a
+QOgAoMI1YHXRdK1SXgIqbXTgjXrKbI7l
+=1V7v
 -----END PGP SIGNATURE-----
